# BYdream

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py
app/api/: dream_routes.py
app/core/: config.py  dependencies.py  settings.py
app/database/: connection.py  session.py
app/models/: dream_model.py
app/piplines/: dream_pipeline.py
app/schemas/: dream_schema.py
app/services/: analysis_service.py  audio.service.py  audio_service.py  image_service.py
app/utils/: exceptions.py  logger.py
scrips/: build_rag_db.py
tests/: test_api.py  test_piplines.py
