# C:\Users\user\Desktop\BYDream\BYdream\pyproject.toml
# 이 파일을 열어서 아래 내용으로 정확히 덮어쓰거나 수정하세요.

[project]
name = "bydream"
version = "0.1.0"
description = ""
authors = [
    {name = "codingchqh",email = "dlgustj723@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13" # <<-- 이 부분이 정확한지 확인
dependencies = [
    "python (>=3.12,<3.13)", # <<-- 이 부분도 정확한지 확인
]

[tool.poetry] # <<-- 이 섹션이 정확히 이렇게 시작하고
packages = [
    { include = "app" } # <<-- 이 줄이 정확히 이렇게 있는지 확인
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"