# C:\Users\user\Desktop\BYDream\BYdream\pyproject.toml

[project]
name = "bydream"
version = "0.1.0"
description = ""
authors = [
    {name = "codingchqh",email = "dlgustj723@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13" # <<-- 이 부분 정확히
dependencies = [
    "python (>=3.12,<3.13)", # <<-- 이 부분 정확히
]

[tool.poetry]
packages = [
    { include = "app" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"